xee-xpath-outer/tests/snapshots/arithmetic__add_int_to_decimal.snap
---
source: xee-xpath/tests/arithmetic.rs
expression: "evaluate_without_focus(\"12 + 15.4\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Decimal(
                    27.4,
                ),
            ),
        ),
    },
)
