xee-xpath-outer/tests/snapshots/arithmetic__div_decimal.snap
---
source: xee-xpath/tests/arithmetic.rs
expression: "evaluate_without_focus(\"12 div 3.0\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Decimal(
                    4.0,
                ),
            ),
        ),
    },
)
